# agentenv

./: Cargo.toml  LICENSE  README.md  flake.nix  renovate.json
.github/workflows/: release.yml  test.yml
src/: completion.rs  config.rs  emit.rs  envs.rs  hook.rs  main.rs  picker.rs  prompt.rs  resolve.rs  state.rs
tests/: integration.rs
