[package]
name = "agentenv"
version = "0.3.0"
edition = "2021"
description = "Switch Claude Code / Codex / OpenCode profiles per shell"
license = "MIT"
repository = "https://github.com/namachan10777/agentenv"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skim = "5"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
